Use Set.of() instead of Collections.singleton()